placing stones and turn indicator

--- a/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
+++ b/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import java.lang.Double?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
+<?import javafx.scene.shape.Polygon?>
 
-<VBox alignment="CENTER" prefHeight="900.0" prefWidth="900.0" spacing="80.0"
-      xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="comp20050.hexagonalboard.HelloController">
+<VBox alignment="CENTER" prefHeight="900.0" prefWidth="900.0" spacing="80.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="comp20050.hexagonalboard.HelloController">
 
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <!-- Turn Label -->
-    <Label fx:id="turnLabel" text="Red's Turn" style="-fx-font-size: 24px; -fx-font-weight: bold;"/>
+    <Label fx:id="turnLabel" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Red's Turn" textFill="#e12929" />
 
     <!-- Hexagon Prototype (Invisible) -->
-    <Polygon fx:id="hexPrototype" fill="#FF0000" stroke="black" strokeWidth="2" rotate="90.0" visible="false">
+    <Polygon fx:id="hexPrototype" fill="#FF0000" rotate="90.0" stroke="black" strokeWidth="2" visible="false">
         <points>
             <Double fx:value="0.0" />
             <Double fx:value="-25.0" />
@@ -37,9 +37,9 @@
 
 
     <!-- Stone Prototype (Invisible Circle) -->
-    <Circle fx:id="stonePrototype" radius="20" fill="red" visible="true"/>
+    <Circle fx:id="stonePrototype" fill="red" radius="20" visible="true" />
 
     <!-- Pane to Hold Hex Board -->
-    <Pane fx:id="hexBoardPane" prefHeight="500.0" prefWidth="500.0"/>
+    <Pane fx:id="hexBoardPane" prefHeight="500.0" prefWidth="500.0" />
 
 </VBox>
