--- a/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
+++ b/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import java.lang.Double?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
@@ -17,7 +17,8 @@
 
     <!-- Turn Label -->
     <Label fx:id="turnLabel" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Red's Turn" textFill="#e12929" />
-
+    <Button fx:id="RestartButton" alignment="CENTER" contentDisplay="TOP" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#restartGame" style="-fx-background-radius: 25; -fx-pref-height: 60; -fx-pref-width: 120;" styleClass="restart-button" text="🔄 Restart" />
+    
     <!-- Hexagon Prototype (Invisible) -->
     <Polygon fx:id="hexPrototype" fill="#FF0000" rotate="90.0" stroke="black" strokeWidth="2" visible="false">
         <points>
