--- a/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
+++ b/src/main/resources/comp20050/hexagonalboard/hello-view.fxml
@@ -4,44 +4,70 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Polygon?>
 
-<VBox alignment="CENTER" prefHeight="900.0" prefWidth="900.0" spacing="80.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="comp20050.hexagonalboard.HelloController">
 
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-    </padding>
+<VBox alignment="CENTER" prefHeight="900.0" prefWidth="900.0" spacing="40.0"
+      xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="comp20050.hexagonalboard.HelloController">
 
-    <!-- Turn Label -->
-    <Label fx:id="turnLabel" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Red's Turn" textFill="#e12929" />
-    <Button fx:id="RestartButton" alignment="CENTER" contentDisplay="TOP" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#restartGame" style="-fx-background-radius: 25; -fx-pref-height: 60; -fx-pref-width: 120;" styleClass="restart-button" text="🔄 Restart" />
-    
-    <!-- Hexagon Prototype (Invisible) -->
-    <Polygon fx:id="hexPrototype" fill="#FF0000" rotate="90.0" stroke="black" strokeWidth="2" visible="false">
-        <points>
-            <Double fx:value="0.0" />
-            <Double fx:value="-25.0" />
-            <Double fx:value="22.5" />
-            <Double fx:value="-12.5" />
-            <Double fx:value="22.5" />
-            <Double fx:value="12.5" />
-            <Double fx:value="0.0" />
-            <Double fx:value="25.0" />
-            <Double fx:value="-22.5" />
-            <Double fx:value="12.5" />
-            <Double fx:value="-22.5" />
-            <Double fx:value="-12.5" />
-        </points>
-    </Polygon>
+  <HBox spacing="20" alignment="CENTER">
+    <Button fx:id="RestartButton" text="🔄 Restart" onAction="#restartGame" style="-fx-background-radius: 25; -fx-pref-height: 60; -fx-pref-width: 120;" />
+    <Button fx:id="exitButton" text="Exit" onAction="#exitGame" visible="true" style="-fx-background-radius: 25; -fx-pref-height: 60; -fx-pref-width: 120;" />
+  </HBox>
 
 
-    <!-- Stone Prototype (Invisible Circle) -->
-    <Circle fx:id="stonePrototype" fill="red" radius="20" visible="false" />
+  <padding>
+    <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+  </padding>
 
-    <!-- Pane to Hold Hex Board -->
-    <Pane fx:id="hexBoardPane" prefHeight="500.0" prefWidth="500.0" />
+  <!-- Turn Label -->
+  <Label fx:id="turnLabel"
+         style="-fx-font-size: 24px; -fx-font-weight: bold;"
+         text="Red's Turn"
+         textFill="#e12929"/>
+
+
+
+  <!-- Hexagon Prototype (Invisible) -->
+  <Polygon fx:id="hexPrototype" fill="#FF0000" rotate="90.0" stroke="black" strokeWidth="2" visible="false">
+    <points>
+      <Double fx:value="0.0"/>
+      <Double fx:value="-25.0"/>
+      <Double fx:value="22.5"/>
+      <Double fx:value="-12.5"/>
+      <Double fx:value="22.5"/>
+      <Double fx:value="12.5"/>
+      <Double fx:value="0.0"/>
+      <Double fx:value="25.0"/>
+      <Double fx:value="-22.5"/>
+      <Double fx:value="12.5"/>
+      <Double fx:value="-22.5"/>
+      <Double fx:value="-12.5"/>
+    </points>
+  </Polygon>
+
+  <!-- Stone Prototype (Invisible Circle) -->
+  <Circle fx:id="stonePrototype" fill="red" radius="20" visible="false"/>
+
+  <!-- Pane to Hold Hex Board -->
+  <Pane fx:id="hexBoardPane"
+        prefHeight="500.0" prefWidth="500.0"
+        maxHeight="500.0" maxWidth="500.0"
+        style="-fx-border-color: transparent;" />
+
+
+  <!-- Winner Message Label (Initially Hidden) -->
+  <Label fx:id="winnerLabel"
+         text=""
+         visible="false"
+         style="-fx-font-size: 24px; -fx-text-fill: #333;" />
+
+  <!-- End Game Buttons (Initially Hidden) -->
+
 
 </VBox>
